<resources>
    <string name="app_name">Homework3</string>
    <string name="profile_page">Profile Page</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
</resources>