<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/profile_page"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etFirstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:cursorVisible="false"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@android:color/darker_gray" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:cursorVisible="false"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etAge"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:cursorVisible="false"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/holo_green_dark"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/save"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/clear"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>